*Empty MediaWiki Message*

--- a/अगलोट.mw
+++ b/अगलोट.mw
@@ -1,2 +1,209 @@
-Aglote (६२६९७३)
-Aglote हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील १६४५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ४०२ कुटुंबाचे व पुराय १७७२ लोकसंख्या आसा.
+{{माहितीचौकट भारतीय न्यायक्षेत्र
+|प्रकार = गांव
+|जनगणना २०११_स्थलनिर्देशांक=626973
+|थळावें_नांव=Aglote
+|तालुका_नांव=सांगें
+|जिल्लो_नांव=दक्षिण गोवा
+|राज्य_नांव=गोंय
+|विभाग=
+|जिल्लो=[[दक्षिण गोवा]]
+|तालुका_नांवां=[[सांगें]]
+|लागींचे_शार=[[PONDA]]
+|अक्षांश=
+|रेखांश=
+|शोधक_स्थान=right
+|क्षेत्रफळ_एकूण=16.45
+|समुद्र तळा पसून उंची=
+|लोकसंख्या_एकूण=1772
+|लोकसंख्या_वर्स=2011
+|लोकसंख्या_घनत्व=107
+|लोकसंख्या_पुरुश=858
+|लोकसंख्या_स्त्री=914
+|लिंग_गुणोत्तर=1065
+|अधिकृत_भास=[[कोंकणी, मराठी]]
+}}
+
+== Aglote (६२६९७३) ==
+
+Aglote हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील १६४५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ४०२ कुटुंबाचे व पुराय १७७२ लोकसंख्या आसा. हांगा लागीचे शार PONDA ३० किलोमीटर अंतरावर आसा. हांगा ८५८ दादले आनीक ९१४ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ३०१ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९७३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: १३६३
+* साक्षर पुरुश लोकसंख्या: ७०० (८१.५९%)
+* साक्षर स्त्री लोकसंख्या: ६६३ (७२.५४%)
+
+
+== शैक्षणिक सुविधा ==  
+ सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (SANCORDEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत ६ शासकीय प्राथमिक शाळा आसा. 
+ ﻿गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (SANCORDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (SANCORDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BANDORA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PONDA) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA-CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ 
+
+
+== वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक आरोग्य उपकेंद्र  ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+
+सगळ्यांत लागीं कुटुंब कल्याणकेंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
+
+
+== वैजकी सुविधा (अशासकीय) ==
+
+
+
+
+
+
+
+
+
+
+
+== पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण आसा.
+गांवांत धापिल्लें बांयचें उदक पुरवण आसा.
+गांवांत उघड्या बांयचें उदक पुरवण आसा.
+गांवांत हॅन्डपंपचें उदक पुरवण ना.
+गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
+गांवांत झरीचें उदक पुरवण ना.
+गांवांत न्हय/खाजनाचें उदक पुरवण आसा.
+गांवांत तळी/कोंड उदक पुरवण आसा.
+गांवांत अन्य पद्धतीचे उदक पुरवण ना.
+
+
+== नितळसाण ==
+गांवांत बंद गटार उपलब्ध ना.
+गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
+गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
+गांवांत न्हाणीघर सोडून सार्वजनिक स्वच्छता घर उपलब्ध ना.
+गांवांत ग्रामीण उत्पादक केंद्रे ना जाल्यार सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत ग्रामीण सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
+
+
+== दळणवळण आनीक येरादारी ==
+गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत उपपोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं उपपोस्ट ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गावाचो पीन कोड ४०३४०६  आसा.
+गांवांत दूरध्वनी उपलब्ध आसा.
+गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा.
+गांवांत मोबाईल फोन सुवीधा उपलब्ध ना.सगळ्यांत लागीं मोबाईल फोन सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत शासकीय बस सेवा उपलब्ध आसा.
+गांवांत खाजगी बस सेवा उपलब्ध आसा.
+गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत व्हॅन उपलब्ध ना.सगळ्यांत लागीं व्हॅन १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत ट्रॅक्टर उपलब्ध ना.
+गांवांत सायकल रिक्षा (पायचाकी) उपलब्ध ना.
+गांवांत सायकल रिक्षा (यांत्रिक) उपलब्ध ना.
+गांवांत बैल आनी अन्य जनावरांनी ओढिल्ली गाडी उपलब्ध ना.
+गांवांत समुद्र/नदी बोट सेवा उपलब्ध ना.सगळ्यांत लागीं समुद्र/नदी बोट सेवा १० किलोमिटर परस चड अंतराचेर आसा.
+राष्ट्रीय महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राष्ट्रीय महामार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+राज्य महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राज्य महामार्ग ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+जिल्ल्यातलो मुखेल रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो मुखेल रस्तो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो १० किलोमिटर परस चड अंतराचेर आसा.
+
+सगळ्यांत लागीं कच्चो रस्तो ५ किलोमिटरा परस कमी अंतराचेर आसा.
+
+सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+
+
+
+== बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत स्वयंसहाय्य गट उपलब्ध आसा.
+गांवांत रेशन मांड उपलब्ध ना.सगळ्यांत लागीं रेशन मांड ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत मंडी / कायमचे बाजार उपलब्ध ना.सगळ्यांत लागीं मंडी / कायमचे बाजार ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा.
+
+
+== आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
+गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
+गांवांत 'आशा' कर्मचारी उपलब्ध आसा.
+गांवांत समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) उपलब्ध ना.सगळ्यांत लागीं समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत खेळांमळ उपलब्ध ना.सगळ्यांत लागीं खेळांमळ ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत खेळ / मनोरंजन केंद्र उपलब्ध आसा.
+गांवांत चित्रपटगृह / व्हिडिओ केंद्र उपलब्ध ना.सगळ्यांत लागीं चित्रपटगृह / व्हिडिओ केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत सार्वजनिक पुस्तकालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक पुस्तकालय १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत सार्वजनिक वाचनालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक वाचनालय १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत खबरेपत्र पुरवण उपलब्ध ना.सगळ्यांत लागीं खबरेपत्र पुरवण ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत विधानसभा मतदान केंद्र उपलब्ध आसा.
+गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध ना.सगळ्यांत लागीं जन्म मृत्यु नोंदणी केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+
+
+== वीज ==
+२४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण शेतकामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण शेतकामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण वेपाराविशी कामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण वेपाराविशी कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+
+
+== जमिनीचो वापर ==
+Aglote ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ७६५.२
+* शेतकामा खातीर ना वापरिल्ली जमीन: १५०.०२
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ४१३.९८
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ३१५.८
+* एकूण कोरड व्हांवपी जमीन: ३००
+* एकूण बागायत जमीन: १५.८
+
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ५.३
+* तळी: ०
+* ओढे: ०
+* हेर: १०.५
+
+
+== उत्पादन ==
+Aglote ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COCONUTS,COUNTRY LIQUOR,CASHEW NUTS,SUGAR
+
+
+[[वर्ग:[[दक्षिण गोवा]]]]
+[[वर्ग:[[सांगें]]]]
+[[वर्ग:[[दक्षिण गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
