--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -136,3 +136,5 @@
 गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध ना.सगळ्यांत लागीं जन्म मृत्यु नोंदणी केंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
 == वीज ==
+२२ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२२ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
