--- a/अडवय.mw
+++ b/अडवय.mw
@@ -2,7 +2,7 @@
 
 अडवय हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ५७५.४७ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १६० कुटुंबाचे व पुराय ६०९ लोकसंख्या आसा. हांगा लागीचे शार VALPOI ६ किलोमीटर अंतरावर आसा. हांगा ३०३ दादले आनीक ३०६ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ४१ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८२५ <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
-== साक्षरताय ==
+== '''साक्षरताय''' ==
 
 * एकूण साक्षर लोकसंख्या: ४७४
 * साक्षर पुरुश लोकसंख्या: २५१ (८२.८४%)
