--- a/खोडयें.mw
+++ b/खोडयें.mw
@@ -171,3 +171,5 @@
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: ५०.९५
 * कायमस्वरूपी पडीक जमीन: ३०.१५
+* सद्यस्थितींत पडीक जमीन: १३.१५
+* पिकां सकयली जमीन: १०२.३४
