--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -149,3 +149,5 @@
 == जमिनीचो वापर ==
 चरावणें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ४१९.०६
+* शेतकामा खातीर ना वापरिल्ली जमीन: ११.५
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
