--- a/खोडयें.mw
+++ b/खोडयें.mw
@@ -175,3 +175,11 @@
 * पिकां सकयली जमीन: १०२.३४
 * एकूण कोरड व्हांवपी जमीन: १००.४९
 * एकूण बागायत जमीन: १.८५
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०.५
+* बांयो / कूप नलिका: १.३५
+* तळी: ०
+* ओढे: ०
+* हेर: ०
