--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -155,3 +155,5 @@
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: १.१८
 * कायमस्वरूपी पडीक जमीन: २०
+* सद्यस्थितींत पडीक जमीन: १०
+* पिकां सकयली जमीन: १३०.९१
