--- a/खोडयें.mw
+++ b/खोडयें.mw
@@ -183,3 +183,13 @@
 * तळी: ०
 * ओढे: ०
 * हेर: ०
+== उत्पादन ==
+खोडयें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,ARECANUTS,SUGARCANE
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[सत्तरी]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
