*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -1,4 +1,4 @@
-गिरीं हो उत्तर गोंय जिल्ह्यांतल्या बार्देस तालुक्यांतलो एक गांव. ह्या गांवाचे क्षेत्र ४.०३ चौ. किमी. आसा. २०११ चे जनगणने प्रमाण ह्या शारांत ११७८ कुटुंबां वा वट्ट ५०३६ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.राज्याची राजधानी PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.हातूंत २५०२ दादले आनी २५३४ बांयलां आसात.हातूंत अनुसुचीत जातीचे लोक ४३ आसून अनुसुचीत जमातीचे ४ लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६६९३ <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आहे
+गिरीं हो उत्तर गोंय जिल्ह्यांतल्या बार्देस तालुक्यांतलो एक गांव. ह्या गांवाचे क्षेत्र ४.०३ चौ. किमी. आसा. २०११ चे जनगणने प्रमाण ह्या गांवांत ११७८ कुटुंबां वा वट्ट ५०३६ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.राज्याची राजधानी PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.हातूंत २५०२ दादले आनी २५३४ बांयलां आसात.हातूंत अनुसुचीत जातीचे लोक ४३ आसून अनुसुचीत जमातीचे ४ लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६६९३ <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आहे
 
 लोकसंख्योप्रमाणे शाराचो दर्जो V (लोकसंख्या_एकूण ५,००० to ९,९९९).
 शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'
