--- a/खोडयें.mw
+++ b/खोडयें.mw
@@ -187,9 +187,10 @@
 खोडयें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,ARECANUTS,SUGARCANE
 
 
-[[वर्ग:[[उत्तर गोवा]]]]
-[[वर्ग:[[सत्तरी]]]]
-[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
-
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:सत्तरी तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
 
 == संदर्भ ==
