--- a/अडवय.mw
+++ b/अडवय.mw
@@ -49,7 +49,7 @@
 
 ﻿गांवांत १ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
 
-== पिवपाचे उदक ==
+== '''पिवपाचे उदक''' ==
 
 गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
 गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण आसा.
