--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -169,3 +169,4 @@
 * हेर: ०
 
 == उत्पादन ==
+चरावणें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,RICE,COCONUTS
