--- a/अडवय.mw
+++ b/अडवय.mw
@@ -70,7 +70,7 @@
 हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
 गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
 
-== दळणवळण आनीक येरादारी ==
+== '''दळणवळण आनीक येरादारी''' ==
 
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
