--- a/अवतार.mw
+++ b/अवतार.mw
@@ -1,4 +1,4 @@
-== अवतारः ==
+== अवतार ==
 दैवी वा अतिमानवी शक्ती वा व्यक्ती, मनशाचें वा हेर प्राण्याचें रुप घेवन धर्तरेचेर येवन रावता आनी आपलें इत्सित कार्य पुराय करता, ह्या आदिकाळासावन चलत आयिल्ल्या धार्मिक समजुतीक ‘अवतार’ अशें म्हणटात.
 
 ‘अवतार’ ह्या उतरांत ‘अव’ + ‘तृ’ ही दोन उतरां आसून ताचो अर्थ वयले सुवातेवेल्यान सकयले सुवातेर देंवप असो जाता. संवसारांतल्या चडशा धर्मांत ह्या ना त्या प्रकारान अवतार कल्पना मानिल्ली दिसता.
