--- a/कणकिरें.mw
+++ b/कणकिरें.mw
@@ -145,3 +145,10 @@
 * शेतकामा खातीर ना वापरिल्ली जमीन: ०.८
 * ओसाड आनी लागवड ना केल्ली जमीन: ३८.१५
 * कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ७१.७१
+* कायमस्वरूपी पडीक जमीन: ४.३
+* सद्यस्थितींत पडीक जमीन: १०.१
+* पिकां सकयली जमीन: २२८.३४
+* एकूण कोरड व्हांवपी जमीन: २२४.८३
+* एकूण बागायत जमीन: ३.५१
