--- a/कणकिरें.mw
+++ b/कणकिरें.mw
@@ -152,3 +152,10 @@
 * पिकां सकयली जमीन: २२८.३४
 * एकूण कोरड व्हांवपी जमीन: २२४.८३
 * एकूण बागायत जमीन: ३.५१
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ३.५१
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: ०
