--- a/कणकिरें.mw
+++ b/कणकिरें.mw
@@ -159,3 +159,13 @@
 * तळी: ०
 * ओढे: ०
 * हेर: ०
+== उत्पादन ==
+कणकिरें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,COCONUTS
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[सत्तरी]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
