--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -40,3 +40,4 @@
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA CT (७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  PANAJI (३२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा BANDORA CT (४ किमी) हांगां आसा.
+शारांत १ शासकीय अनौपचारीक प्रशिक्षणकेंद्र आसा.
