--- a/भाटये.mw
+++ b/भाटये.mw
@@ -17,4 +17,4 @@
 गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा. गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना. गांवांत धापिल्लें बांयचें उदक पुरवण आसा. गांवांत उघड्या बांयचें उदक पुरवण ना. गांवांत हॅन्डपंपचें उदक पुरवण ना. गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना. गांवांत झरीचें उदक पुरवण आसा. गांवांत न्हय/खाजनाचें उदक पुरवण ना. गांवांत तळी/कोंड उदक पुरवण आसा. गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
 == '''नितळसाण''' ==
-गांवांत पोस्ट ऑफीस उपलब्ध ना. सगळ्यांत लागीं पोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत उपपोस्ट ऑफीस उपलब्ध ना. सगळ्यांत लागीं उपपोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा. गावाचो पीन कोड ४०३१०८ आसा. गांवांत दूरध्वनी उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा. गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा. गांवांत शासकीय बस सेवा उपलब्ध आसा. गांवांत खाजगी बस सेवा उपलब्ध आसा.  गांवांत रेल्वे स्थानक उपलब्ध ना. सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा. गांवांत ऑटोरिक्षा व टमटम उपलब्ध आसा.
+गांवांत पोस्ट ऑफीस उपलब्ध ना. सगळ्यांत लागीं पोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत उपपोस्ट ऑफीस उपलब्ध ना. सगळ्यांत लागीं उपपोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा. गावाचो पीन कोड ४०३१०८ आसा. गांवांत दूरध्वनी उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा. गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा. गांवांत शासकीय बस सेवा उपलब्ध आसा. गांवांत खाजगी बस सेवा उपलब्ध आसा.  गांवांत रेल्वे स्थानक उपलब्ध ना. सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा. गांवांत ऑटोरिक्षा व टमटम उपलब्ध आसा. गांवांत टॅक्सी उपलब्ध आसा.
