--- a/कोंनशें.mw
+++ b/कोंनशें.mw
@@ -32,3 +32,6 @@
 * साक्षर स्त्री लोकसंख्या: ६० (६५.२२%)
 == शैक्षणिक सुविधा ==  
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (NIRANCAL) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (NIRANCAL) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (NIRANCAL) ५ किलोमिटरा परस कमी अंतराचेर आसा.
