--- a/कोंनशें.mw
+++ b/कोंनशें.mw
@@ -35,3 +35,5 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (NIRANCAL) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (NIRANCAL) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (SIRODA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
