--- a/खोर्जुवें.mw
+++ b/खोर्जुवें.mw
@@ -1,28 +1,28 @@
-≤खोर्जुवें
+खोर्जुवें
 
 खोर्जुवें हे उत्तर गोवा जिल्ह्यातल्या बार्देस तालुक्यातील ४८८.२६ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ६४० कुटुंबाचे व पुराय २७२५ लोकसंख्या आसा. हांगा लागीचे शार MAPUSA ७ किलोमीटर अंतरावर आसा. हांगा १३०३ दादले आनीक १४२२ बायला आसा. हांगा अनुसूचित जातीचे लोक २५२ आसून अनुसूचित जमातीचे ५४ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६६८३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
-साक्षरताय ==  
+== साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: २२४५
 * साक्षर पुरुश लोकसंख्या: १०८८ (८३.५%)
 * साक्षर स्त्री लोकसंख्या: ११५७ (८१.३६%)
 
-शैक्षणिक सुविधा ==  
+== शैक्षणिक सुविधा ==  
 गांवांत २ शासकीय पूर्व-प्राथमिक शाळा आसा. 
- ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
+गांवांत १ खाजगी प्राथमिक शाळा आसा.
 गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
- ﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (ALDONA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (MAPUSA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत १ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (ALDONA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (MAPUSA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA CT) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (MAEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MAPUSA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MAPUSA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MAPUSA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 
-वैजकी सुविधा (शासकीय) ==
+== वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
 ﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
@@ -32,10 +32,9 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत १ कुटुंब कल्याणकेंद्र आसा.
 
-﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
-
-वैजकी सुविधा (अशासकीय) ==
+== वैजकी सुविधा (अशासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
 ﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
@@ -45,19 +44,9 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत १ कुटुंब कल्याणकेंद्र आसा.
 
-﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
- वैजकी सुविधा (अशासकीय) ==
-
-
-
-
-
-
-
-
-
-
+== वैजकी सुविधा (अशासकीय) ==
 
 == पिवपाचे उदक ==
 गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
@@ -71,7 +60,7 @@
 गांवांत तळी/कोंड उदक पुरवण आसा.
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
-नितळसाण ==
+== नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
 गांवांत उघडें गटार उपलब्ध आसा.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
@@ -110,7 +99,7 @@
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
 
-बाजार आनी सावकारी पेडी ==
+== बाजार आनी सावकारी पेडी ==
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत वेपाराविशी सावकारी पेडी उपलब्ध आसा.
 गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ किलोमिटरा परस कमी अंतराचेर आसा.
@@ -121,12 +110,11 @@
 गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
-आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+== आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
 गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं बालवाडी (पोषण आहार केंद्र) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
 गांवांत 'आशा' कर्मचारी उपलब्ध आसा.
-
 गांवांत समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) उपलब्ध आसा.
 गांवांत खेळांमळ उपलब्ध ना.सगळ्यांत लागीं खेळांमळ ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत खेळ / मनोरंजन केंद्र उपलब्ध आसा.
@@ -148,7 +136,7 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
-जमिनीचो वापर ==
+== जमिनीचो वापर ==
 खोर्जुवें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ५७.४७
 * शेतकामा खातीर ना वापरिल्ली जमीन: ३०.९६
@@ -162,7 +150,7 @@
 * एकूण कोरड व्हांवपी जमीन: ३१४.३३
 * एकूण बागायत जमीन: १.४२
 
-पणावळ सुविधा ==
+== पणावळ सुविधा ==
 शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
 * कालवे: ०
 * बांयो / कूप नलिका: १.४२
@@ -170,5 +158,5 @@
 * ओढे: ०
 * हेर: ०
 
-उत्पादन ==
+== उत्पादन ==
 खोर्जुवें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR
