*Empty MediaWiki Message*

--- a/दिवाळी.mw
+++ b/दिवाळी.mw
@@ -2,7 +2,7 @@
 
 सलग पांच दीस वेगवेगळ्यो खोसदिण्यो धर्मीक घडणुको घडिल्ल्यो आशिल्ल्यान उमेद उक्तावपाच्या उद्देशान दिवे लावन हो सण मनोवप जाता, देखुनूच ह्या सणाक ‘दिवाळी’ ह्या नांवान संबोदतात. आर्यकाळापासून ह्या सणाक सुरवात जाली अशें म्हण्टात. आर्य लोकांमदीं पार्वण, आश्वयुजी आनी आग्रहायनी हे तीन यज्ञ करताले. ह्या तिनूय यज्ञांचें एकठांय रूपांतर जावन हो उत्सव सुरू जालो. पार्वण यज्ञ म्हळ्यार ‘पाकयज्ञ’. हो पितरां खातीर आसतालो, ‘आश्वयुजी’ हो यज्ञ इंद्र आनी ऋषीदेवता हांकां संबोदून करताले. तेचपरी ‘आग्रहायनी’ हो यज्ञ संवत्सर समाजीक उद्देशान आसतालो. ‘संवत्स’ म्हळ्यार ‘वर्स’. वर्स सोंपतकच जो यज्ञ करतात ताका अग्र+हायन = आग्रहायनी अशें म्हण्टात. हाचे आदीं पुर्विल्ल्या काळांत हे परबेक वेगवेगळ्या नांवांनी वळखताले. इ.स.1 ते 400 ह्या काळांत, ही परब ‘यक्षरात्री’ ‘माहितांनी ’ ह्या नांवांन वळखताले. इ.स.600 च्या सुमाराक ह्या सणाक “ दीप प्रतिपदुत्सव” अशें म्हण्टाले. त्या वेळार ह्या सणाक ‘घुत’ खेळपाची प्रथा आशिल्ली. इ.स.800 च्या सुमाराक काश्मीरांत आनी हेरकडेन ह्या सणाक “दीपमाला” अशें म्हण्टाले. आनंदाचो, उल्लासाचो, प्रसन्नतेचो, प्रकाशाचो हो उत्सव. 
 
-हो सण धनत्रेयादशीक सुरवात जाता. दिवाळीचो दुसरो दीस म्हळ्यार नरक चतुर्दस. अमावस, दिवाळीचो तिसरो दीस. ह्या दिसा लक्ष्मी पुजन जाता. जिका धनलक्ष्मी अशें म्हणटात. दिवाळीचो चौथो दीस म्हळ्यार कार्तिक शुद्द पद्दमी. आनी पाचवो दीस म्हळ्यार यम द्वितीय. जाका भावबीज अशे म्हणटात. ह्या दिसां भयण आपल्या भावाक आपल्या घरां आपयता आनी ताची ओवाळणी करता.
+हो सण धनत्रेयादशीक सुरवात जाता. दिवाळीचो दुसरो दीस म्हळ्यार नरक चतुर्दस. अमावस, दिवाळीचो तिसरो दीस. ह्या दिसा लक्ष्मी पुजन जाता. जिका धनलक्ष्मी अशें म्हणटात. दिवाळीचो चौथो दीस म्हळ्यार कार्तिक शुद्द पद्दमी. आनी पाचवो दीस म्हळ्यार यम िव्दतीय. जाका भावबीज अशें म्हणटात. ह्या दिसां भयण आपल्या भावाक आपल्या घरां आपयता आनी ताची ओवाळणी करता.
 [[File:Deepawali-festival.jpg|thumb| दिवाळी]]
 
 == '''नरक चतुर्दस वा धाकली दिवाळी''' ==
