--- a/कुंडय.mw
+++ b/कुंडय.mw
@@ -24,3 +24,4 @@
 }}
 
 == कुंडय (६२६८५५) ==
+कुंडय हे उत्तर गोवा जिल्ह्यातल्या फोंडें तालुक्यातील २१० हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९१३ कुटुंबाचे व पुराय ३८५९ लोकसंख्या आसा. हांगा लागीचे शार PONDA १० किलोमीटर अंतरावर आसा. हांगा १९८८ दादले आनीक १८७१ बायला आसा. हांगा अनुसूचित जातीचे लोक ७९ आसून अनुसूचित जमातीचे ९०४ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८५५  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
