--- a/कुंडय.mw
+++ b/कुंडय.mw
@@ -25,3 +25,7 @@
 
 == कुंडय (६२६८५५) ==
 कुंडय हे उत्तर गोवा जिल्ह्यातल्या फोंडें तालुक्यातील २१० हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९१३ कुटुंबाचे व पुराय ३८५९ लोकसंख्या आसा. हांगा लागीचे शार PONDA १० किलोमीटर अंतरावर आसा. हांगा १९८८ दादले आनीक १८७१ बायला आसा. हांगा अनुसूचित जातीचे लोक ७९ आसून अनुसूचित जमातीचे ९०४ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८५५  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: ३१०२
+* साक्षर पुरुश लोकसंख्या: १६७७ (८४.३६%)
+* साक्षर स्त्री लोकसंख्या: १४२५ (७६.१६%)
